@@ -16,6 +16,15 @@ x^2 - 4*x
 [0                                        1]
 
 [[5/3, 21/10], [1, 14/39; 0, 1]]
+[[0.025784835985469857086599615759958975735, 0.19991502547374574551005403751
+186752336, 0.45186281535484114060969116665631585174, 429.3224373231859432567
+9365518007185765], [236.14066833281453907800161329220751824, 0.4285510488385
+1596665709890393341856820, 150.79946040103791060176640754728499308, 2.631320
+2173090343535748802565740701163; -269.92315275751730008170377375903240666, -
+0.43067631496228248528429453517899854626, -148.01252145855094116639294556315
+668161, 2.3663505310305237333810138573680868174; 520.12276163564057101801329
+310736861369, -0.21002273379367653129252236835856657763, -77.090093750917700
+406505504609481368135, 1.1773548490708059197847338704713210202; 1, 1, 1, 1]]
 -x^2 + (-y - w)*x + (-y + (w^2 - w))
 x - 1
 x - 1.0000000000000000000000000000000000000
@@ -107,4 +116,7 @@ x - 1
   ***   at top-level: minpoly(Mod(y,x),'y)
   ***                 ^--------------------
   *** minpoly: incorrect priority in minpoly: variable x < y
-Total time spent: 4
+  ***   at top-level: mateigen(merror*bitprecision(1.,64))
+  ***                 ^------------------------------------
+  *** mateigen: precision too low in mateigen.
+Total time spent: 8
