@@ -11,6 +11,8 @@ A=[5/3,7/45;0,21/10];
 mateigen(A)
 mateigen(A*1.)
 mateigen(A,1)
+merror=[224,221,13,2;201,199,12,2;100,99,6,1;85,84,5,1];
+mateigen(merror,1)
 M=[x,x+y;x+1,1];charpoly(M,w)
 v=[1,1.,Mod(1,3),1/2,1+O(3),I,quadgen(5),matid(2)*Mod(1,3),matid(2)*Mod(1,2^64+13)];
 for(i=1,#v,print(charpoly(v[i])))
@@ -59,3 +61,4 @@ mateigen(M,1)
 \\ Errors, keep at end of file
 charpoly(Mod('b, 'b^2 + Mod('a,'a^2+1)), 'newvar)
 minpoly(Mod(y,x), 'y)
+mateigen(merror*bitprecision(1.,64))
