@@ -106,6 +106,8 @@ BA  82- sqrtn(Mod(3,19),4) -> no error [#2127]
     85- n-th derivative of zetahurwitz used 'seriesprecision' instead of n
         + imprecise value when n large [#2130]
     86- lfunzeros(f, [0, b]) wasn't allowed
+    87- mateigen(): typo causing wrong results when correct results were
+        achievable [#2131]
 
   Changed
      1- [libpari] gp_filter return value is now allocated on the stack
